--- a/src/app/organaizer/organaizer.component.html
+++ b/src/app/organaizer/organaizer.component.html
@@ -1,1 +1,26 @@
-<p>organaizer works!</p>
+<section>
+  <header>
+    Today: <strong>{{ dateServise.date | async | moment: 'DD.MM.YYYY'}}</strong>
+    <hr />
+  </header>
+  <main>
+    <ul>
+      <li class="task">
+        <span>
+          <strong>1</strong>
+          asdasfsdfsdf
+        </span>
+        <button class="btn btn-primary">Remove</button>
+      </li>
+    </ul>
+  </main>
+  <footer>
+    <form>
+      <input type="text">
+      <button
+        type="submit"
+        class="btn btn-primary btn-block"
+      >Add</button>
+    </form>
+  </footer>
+</section>
