--- a/src/app/organaizer/organaizer.component.html
+++ b/src/app/organaizer/organaizer.component.html
@@ -4,22 +4,26 @@
     <hr />
   </header>
   <main>
-    <ul>
-      <li class="task">
+    <ul *ngIf="tasks.length; else noTasks">
+      <li class="task" *ngFor="let task of tasks; let i = index">
         <span>
-          <strong>1</strong>
-          asdasfsdfsdf
+          <strong>{{i + 1}}</strong>
+          {{task.title}}
         </span>
-        <button class="btn btn-primary">Remove</button>
+        <button class="btn btn-primary" (click)="remove(task)">Remove</button>
       </li>
     </ul>
+    <ng-template #noTasks>
+      No tasks yet...
+    </ng-template>
   </main>
   <footer>
-    <form>
-      <input type="text">
+    <form (ngSubmit)="submit()" [formGroup]="form">
+      <input type="text" formControlName="title">
       <button
         type="submit"
         class="btn btn-primary btn-block"
+        [disabled]="form.invalid"
       >Add</button>
     </form>
   </footer>
